--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
       <!-- Header -->
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <nav id="header" class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="#">
                 <img src="assets/images/platzi-logo.png" alt="Platzi Logo">
             </a>
