--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
     <title>PlatziConf Hawaii</title>
 </head>
@@ -44,36 +43,33 @@
                         <a class="nav-link text-platzi" href="#">Comprar Tickets</a>
                     </li>
 
-
                 </ul>
             </div>
         </div>
     </nav>
     <!-- /Header -->
 
-    <!-- Carrousel -->
-    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+    <!-- Main -->
+    <section id="main">
+
+        <div id="carousel" class="carousel slide carousel-fade" data-ride="carousel" data-pause="false">
             <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="assets/images/hawaii.jpg" class="d-block w-100" alt="Hawaii 1">
-              </div>
-              <div class="carousel-item">
-                <img src="assets/images/hawaii2.jpg" class="d-block w-100" alt="hawaii 2">
-              </div>
-              <div class="carousel-item">
-                <img src="assets/images/hawaii3.jpeg" class="d-block w-100" alt="hawaii 3">
-              </div>
+                <div class="carousel-item active">
+                    <img src="assets/images/hawaii.jpg" class="d-block w-100" alt="Hawaii 1">
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/images/hawaii2.jpg" class="d-block w-100" alt="hawaii 2">
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/images/hawaii3.jpeg" class="d-block w-100" alt="hawaii 3">
+                </div>
+                <div class="overlay">
+                </div>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
-          </div>
-    <!-- /Carrousel -->
+
+        </div>
+    </section>
+    <!-- /Main -->
 
     <!-- Footer -->
     <footer id="footer" class="pb-4 pt-4">
