--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
                 </div>
                 <div class="overlay">
                     <div class="container">
-                        <div class="row">
-                            <div class="col-md-6 offset-md-6 text-right">
+                        <div class="row align-items-center">
+                            <div class="col-md-6 offset-md-6 text-center text-md-right">
                                     <h1>Platzi Conf Hawaii</h1>
-                                    <p>
+                                    <p class="d-none d-md-block">
                                       Platzi Conf llega por pimera vez a Hawaii! Un evento para
                                       compartir con nuestra comunidad el conocimiento y experiencia
                                       de los expertos que están creando el futuro de internet.
@@ -76,8 +76,8 @@
                                       estudiantes de Platzi y a los oradores de primer nivel
                                       que tenemos para ti. Te esperamos!
                                     </p>
-                                    <a href="#">Quiero ser orador</a>
-                                    <button type="button">Comprar tickets</button>
+                                    <a href="#" class="btn btn-outline-light">Quiero ser orador</a>
+                                    <button type="button" class="btn btn-platzi">Comprar tickets</button>
                             </div>
                         </div>
                     </div>
