--- a/index.html
+++ b/index.html
@@ -88,6 +88,31 @@
     </section>
     <!-- /Main -->
 
+    <!-- Speakers -->
+    <section id="speakers" class="mt-4">
+        <div class="container">
+            <div class="row">
+                <div class="col text-center text-uppercase">
+                    <small>Conoce a los</small>
+                    <h2>Oradores</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card">
+                        <img class="card-img-top" src="assets/speakers/sacha.jpg" alt="Foto de Sacha">
+                        <div class="card-body">
+                          <h5 class="card-title">Sacha Lifszyc</h5>
+                          <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum, repellat ducimus ipsam quia exercitationem aspernatur perferendis quibusdam et assumenda, harum ab similique. Quia sit animi magnam ipsa necessitatibus, consequuntur illo!</p>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                      </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- /Speakers -->
+
     <!-- Footer -->
     <footer id="footer" class="pb-4 pt-4">
         <div class="container">
