--- a/index.html
+++ b/index.html
@@ -98,11 +98,57 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-4 mb-4">
                     <div class="card">
                         <img class="card-img-top" src="assets/speakers/sacha.jpg" alt="Foto de Sacha">
                         <div class="card-body">
                           <h5 class="card-title">Sacha Lifszyc</h5>
+                          <div class="badges">
+                              <span class="badge badge-warning">Javascript</span>
+                              <span class="badge badge-info">React</span>
+                          </div>
+                          <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum, repellat ducimus ipsam quia exercitationem aspernatur perferendis quibusdam et assumenda, harum ab similique. Quia sit animi magnam ipsa necessitatibus, consequuntur illo!</p>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                      </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <img class="card-img-top" src="assets/speakers/leonidas2.jpeg" alt="Foto de Sacha">
+                        <div class="card-body">
+                          <h5 class="card-title">Leonidas Esteban</h5>
+                          <div class="badges">
+                                <span class="badge badge-warning">Javascript</span>
+                                <span class="badge badge-info">React</span>
+                            </div>
+                          <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum, repellat ducimus ipsam quia exercitationem aspernatur perferendis quibusdam et assumenda, harum ab similique. Quia sit animi magnam ipsa necessitatibus, consequuntur illo!</p>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                      </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <img class="card-img-top" src="assets/speakers/freddy.jpeg" alt="Foto de Sacha">
+                        <div class="card-body">
+                          <h5 class="card-title">Freddy Vega</h5>
+                          <div class="badges">
+                                <span class="badge badge-warning">Javascript</span>
+                                <span class="badge badge-info">React</span>
+                            </div>
+                          <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum, repellat ducimus ipsam quia exercitationem aspernatur perferendis quibusdam et assumenda, harum ab similique. Quia sit animi magnam ipsa necessitatibus, consequuntur illo!</p>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                      </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card">
+                        <img class="card-img-top" src="assets/speakers/cvander.jpeg" alt="Foto de Sacha">
+                        <div class="card-body">
+                          <h5 class="card-title">Christian Van Der H.</h5>
+                          <div class="badges">
+                                <span class="badge badge-warning">Javascript</span>
+                                <span class="badge badge-info">React</span>
+                            </div>
                           <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum, repellat ducimus ipsam quia exercitationem aspernatur perferendis quibusdam et assumenda, harum ab similique. Quia sit animi magnam ipsa necessitatibus, consequuntur illo!</p>
                           <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
