--- a/index.html
+++ b/index.html
@@ -159,6 +159,22 @@
     </section>
     <!-- /Speakers -->
 
+    <!-- Lugar y Fecha -->
+    <section id="place-time">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col pl-0 pr-0">
+                    <img src="assets/images/honolulu.jpg" alt="Honolulu">
+                </div>
+                <div class="col pt-2">
+                    <h2>Honolulu - Octubre 2025</h2>
+                    <p>Honolulu o Honolulú​ es la capital y localidad más grande del estado de Hawái, en los Estados Unidos. Honolulu es la más sureña de entre las principales ciudades estadounidenses. Aunque el nombre de Honolulu se refiere al área urbana en la costa sureste de la isla de Oahu, la ciudad y el condado de Honolulu han formado una ciudad-condado consolidada que cubre toda la isla (aproximadamente 600 km² de superficie).</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- /Lugar y Fecha -->
+    
     <!-- Footer -->
     <footer id="footer" class="pb-4 pt-4">
         <div class="container">
