--- a/index.html
+++ b/index.html
@@ -163,17 +163,31 @@
     <section id="place-time">
         <div class="container-fluid">
             <div class="row">
-                <div class="col pl-0 pr-0">
+                <div class="col-12 col-lg-6  pl-0 pr-0">
                     <img src="assets/images/honolulu.jpg" alt="Honolulu">
                 </div>
-                <div class="col pt-2">
+                <div class="col-12 col-lg-6 pt-2 pb-4">
                     <h2>Honolulu - Octubre 2025</h2>
                     <p>Honolulu o Honolulú​ es la capital y localidad más grande del estado de Hawái, en los Estados Unidos. Honolulu es la más sureña de entre las principales ciudades estadounidenses. Aunque el nombre de Honolulu se refiere al área urbana en la costa sureste de la isla de Oahu, la ciudad y el condado de Honolulu han formado una ciudad-condado consolidada que cubre toda la isla (aproximadamente 600 km² de superficie).</p>
+                    <a href="" class="btn btn-outline-light">Conoce más</a>
                 </div>
             </div>
         </div>
     </section>
     <!-- /Lugar y Fecha -->
+
+    <!-- Conviertete en orador -->
+    <section id="conviertete-en-orador">
+        <div class="container">
+            <div class="row">
+                <div class="col text-uppercase">
+                    <small>Conviertete en un</small>
+                    <h2>orador</h2>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- /Conviertete en orador -->
     
     <!-- Footer -->
     <footer id="footer" class="pb-4 pt-4">
