--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
     <title>PlatziConf Hawaii</title>
 </head>
@@ -67,17 +68,17 @@
                     <div class="container">
                         <div class="row align-items-center">
                             <div class="col-md-6 offset-md-6 text-center text-md-right">
-                                    <h1>Platzi Conf Hawaii</h1>
-                                    <p class="d-none d-md-block">
-                                      Platzi Conf llega por pimera vez a Hawaii! Un evento para
-                                      compartir con nuestra comunidad el conocimiento y experiencia
-                                      de los expertos que están creando el futuro de internet.
-                                      Ven a conocer a miembros del Team Platzi, a otros
-                                      estudiantes de Platzi y a los oradores de primer nivel
-                                      que tenemos para ti. Te esperamos!
-                                    </p>
-                                    <a href="#" class="btn btn-outline-light">Quiero ser orador</a>
-                                    <button type="button" class="btn btn-platzi">Comprar tickets</button>
+                                <h1>Platzi Conf Hawaii</h1>
+                                <p class="d-none d-md-block">
+                                    Platzi Conf llega por pimera vez a Hawaii! Un evento para
+                                    compartir con nuestra comunidad el conocimiento y experiencia
+                                    de los expertos que están creando el futuro de internet.
+                                    Ven a conocer a miembros del Team Platzi, a otros
+                                    estudiantes de Platzi y a los oradores de primer nivel
+                                    que tenemos para ti. Te esperamos!
+                                </p>
+                                <a href="#" class="btn btn-outline-light">Quiero ser orador</a>
+                                <button type="button" class="btn btn-platzi">Comprar tickets</button>
                             </div>
                         </div>
                     </div>
@@ -102,57 +103,69 @@
                     <div class="card">
                         <img class="card-img-top" src="assets/speakers/sacha.jpg" alt="Foto de Sacha">
                         <div class="card-body">
-                          <h5 class="card-title">Sacha Lifszyc</h5>
-                          <div class="badges">
-                              <span class="badge badge-warning">Javascript</span>
-                              <span class="badge badge-info">React</span>
-                          </div>
-                          <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum, repellat ducimus ipsam quia exercitationem aspernatur perferendis quibusdam et assumenda, harum ab similique. Quia sit animi magnam ipsa necessitatibus, consequuntur illo!</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <h5 class="card-title">Sacha Lifszyc</h5>
+                            <div class="badges">
+                                <span class="badge badge-warning">Javascript</span>
+                                <span class="badge badge-info">React</span>
+                            </div>
+                            <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum,
+                                repellat ducimus ipsam quia exercitationem aspernatur perferendis quibusdam et
+                                assumenda, harum ab similique. Quia sit animi magnam ipsa necessitatibus, consequuntur
+                                illo!</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
-                      </div>
+                    </div>
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card">
                         <img class="card-img-top" src="assets/speakers/leonidas2.jpeg" alt="Foto de Sacha">
                         <div class="card-body">
-                          <h5 class="card-title">Leonidas Esteban</h5>
-                          <div class="badges">
+                            <h5 class="card-title">Leonidas Esteban</h5>
+                            <div class="badges">
                                 <span class="badge badge-warning">Javascript</span>
                                 <span class="badge badge-info">React</span>
                             </div>
-                          <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum, repellat ducimus ipsam quia exercitationem aspernatur perferendis quibusdam et assumenda, harum ab similique. Quia sit animi magnam ipsa necessitatibus, consequuntur illo!</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum,
+                                repellat ducimus ipsam quia exercitationem aspernatur perferendis quibusdam et
+                                assumenda, harum ab similique. Quia sit animi magnam ipsa necessitatibus, consequuntur
+                                illo!</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
-                      </div>
+                    </div>
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card">
                         <img class="card-img-top" src="assets/speakers/freddy.jpeg" alt="Foto de Sacha">
                         <div class="card-body">
-                          <h5 class="card-title">Freddy Vega</h5>
-                          <div class="badges">
+                            <h5 class="card-title">Freddy Vega</h5>
+                            <div class="badges">
                                 <span class="badge badge-warning">Javascript</span>
                                 <span class="badge badge-info">React</span>
                             </div>
-                          <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum, repellat ducimus ipsam quia exercitationem aspernatur perferendis quibusdam et assumenda, harum ab similique. Quia sit animi magnam ipsa necessitatibus, consequuntur illo!</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum,
+                                repellat ducimus ipsam quia exercitationem aspernatur perferendis quibusdam et
+                                assumenda, harum ab similique. Quia sit animi magnam ipsa necessitatibus, consequuntur
+                                illo!</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
-                      </div>
+                    </div>
                 </div>
                 <div class="col-md-4 mb-4">
                     <div class="card">
                         <img class="card-img-top" src="assets/speakers/cvander.jpeg" alt="Foto de Sacha">
                         <div class="card-body">
-                          <h5 class="card-title">Christian Van Der H.</h5>
-                          <div class="badges">
+                            <h5 class="card-title">Christian Van Der H.</h5>
+                            <div class="badges">
                                 <span class="badge badge-warning">Javascript</span>
                                 <span class="badge badge-info">React</span>
                             </div>
-                          <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum, repellat ducimus ipsam quia exercitationem aspernatur perferendis quibusdam et assumenda, harum ab similique. Quia sit animi magnam ipsa necessitatibus, consequuntur illo!</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum,
+                                repellat ducimus ipsam quia exercitationem aspernatur perferendis quibusdam et
+                                assumenda, harum ab similique. Quia sit animi magnam ipsa necessitatibus, consequuntur
+                                illo!</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
                         </div>
-                      </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -168,7 +181,11 @@
                 </div>
                 <div class="col-12 col-lg-6 pt-2 pb-4">
                     <h2>Honolulu - Octubre 2025</h2>
-                    <p>Honolulu o Honolulú​ es la capital y localidad más grande del estado de Hawái, en los Estados Unidos. Honolulu es la más sureña de entre las principales ciudades estadounidenses. Aunque el nombre de Honolulu se refiere al área urbana en la costa sureste de la isla de Oahu, la ciudad y el condado de Honolulu han formado una ciudad-condado consolidada que cubre toda la isla (aproximadamente 600 km² de superficie).</p>
+                    <p>Honolulu o Honolulú​ es la capital y localidad más grande del estado de Hawái, en los Estados
+                        Unidos. Honolulu es la más sureña de entre las principales ciudades estadounidenses. Aunque el
+                        nombre de Honolulu se refiere al área urbana en la costa sureste de la isla de Oahu, la ciudad y
+                        el condado de Honolulu han formado una ciudad-condado consolidada que cubre toda la isla
+                        (aproximadamente 600 km² de superficie).</p>
                     <a href="" class="btn btn-outline-light">Conoce más</a>
                 </div>
             </div>
@@ -177,18 +194,37 @@
     <!-- /Lugar y Fecha -->
 
     <!-- Conviertete en orador -->
-    <section id="conviertete-en-orador">
+    <section id="conviertete-en-orador" class="pt-2 pb-2">
         <div class="container">
             <div class="row">
-                <div class="col text-uppercase">
+                <div class="col text-uppercase text-center">
                     <small>Conviertete en un</small>
                     <h2>orador</h2>
                 </div>
             </div>
+            <div class="row">
+                <div class="col text-center">Anótate como orador para dar una charla ignite. Cuéntanos de qué quieres
+                    hablar!</div>
+            </div>
+            <div class="row">
+                    <div class="col col-md-10 offset-md-1 col-lg-8 offset-lg-2 pt-2 ">
+                        <form>
+                            <div class="form-row">
+                                <div class="form-group col-12 col-md-6">
+                                    <input type="text" class="form-control" placeholder="Nombre">
+                                </div>
+                                <div class="form-group col-12 col-md-6">
+                                    <input type="text" class="form-control" placeholder="Apellido">
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
         </div>
+        
     </section>
     <!-- /Conviertete en orador -->
-    
+
     <!-- Footer -->
     <footer id="footer" class="pb-4 pt-4">
         <div class="container">
