--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <title>PlatziConf Hawaii</title>
 </head>
 
-<body>
+<body data-spy="scroll" data-target="#navbar" data-offset="57">
     <!-- Header -->
-    <nav id="header" class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav id="header" class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <div class="container">
 
             <a class="navbar-brand" href="#">
@@ -26,19 +26,19 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="collapse navbar-collapse" id="navbar">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">La Conferencia</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#main">La Conferencia</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Los Oradores</a>
+                        <a class="nav-link" href="#speakers">Los Oradores</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">El Lugar y la Fecha</a>
+                        <a class="nav-link" href="#place-time">El Lugar y la Fecha</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Coviertete en Orador</a>
+                        <a class="nav-link" href="#conviertete-en-orador">Coviertete en Orador</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-platzi" href="#">Comprar Tickets</a>
@@ -267,6 +267,10 @@
         </div>
     </footer>
     <!-- /Footer -->
+
+    <!-- Modal -->
+    
+    <!-- /Modal -->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
